Fixed the logo on mobile

--- a/css/kustom.css
+++ b/css/kustom.css
@@ -307,9 +307,9 @@ margin: auto;}
 .flexslider{
 margin-top: 50px !important;}
 .creative-logo{
-	height: 60px;
-	width: 100px;
-	margin-top: -20px;
+	height: 30px;
+	width: 70px;
+	margin-top: -5px;
 }
 .side-image{
 	width: 300px;
